2023. 3. 9. Added zEdge2DLinScale and zEdge2DClosest by using ZEDGEXD_LINSCALE and ZEDGEXD_CLOSEST macros. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
2023. 3. 9. Added zeo_elemxd and reimplemented some methods that are common in zeo_elem2d and zeo_elem3d. [zeo_elemxd, zeo_elem2d, zeo_elem3d]
2023. 3. 4. Added methods to zEP class. [zeo_ep]
2023. 3. 4. Added zEPAdd. [zeo_ep]
2023. 3. 4. Redefined zVec2D, zVec3D, zVec6D, zMat3D, zMat6D, zFrame3D, and zEP by using ZDEF_STRUCT/ZDEF_UNION. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_mat6d zeo_frame3d, zeo_ep]
2023. 3. 3. Modified zrgbblack, zrgbwhite, __z_texture_read_file, __z_texture_bump_read_file, zvec2Dzero, zvec2Dx, zvec2Dy, zvec3Dzero, zvec3Dx, zvec3Dy, zvec3Dz, zvec6Dzero, zvec6Dlinx, zvec6Dliny, zvec6Dlinz, zvec6Dangx, zvec6Dangy, zvec6Dangz, zmat3Dzero, zmat3Dident, zframe3Dident, zeo_shape3d_box_com, zeo_shape3d_sphere_com, zeo_shape3d_cyl_com, zeo_shape3d_cone_com, zeo_shape3d_ellips_com, zeo_shape3d_ecyl_com, zeo_shape3d_ph_com, zeo_shape3d_nurbs_com, and zeo_map_terra_com with the new definition of __EXPORT. [zeo_render_color, zeo_render_texture, zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_frame3d, zeo_shape3d_box, zeo_shape3d_sphere, zeo_shape3d_cyl, zeo_shape3d_cone, zeo_shape3d_ellips, zeo_shape3d_ecyl, zeo_shape3d_ph, zeo_shape3d_nurbs, zeo_map_terra]
2023. 2.19. Modified zVec2D, zVec3D, zVec6D, zMat3D, zFrame3D, and zEP to have C++ interfaces. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_frame]
2023. 2.14. Reimplemented zVec2DNormalizeNC, zVec2DNormalize, zVec2DNormalizeNCDRC, and zVec2DNormalizeDRC. [zeo_vec2d]
2023. 2.14. Added _zVec2DZero, _zVec2DIsTiny, and zVec2DIsNan. [zeo_vec2d]
2023. 2.14. Added _zVec2DAddDRC, _zVec2DSubDRC, _zVec2DRevDRC, _zVec2DMulDRC, _zVec2DAmpDRC, _zVec2DDemDRC, and _zVec2DCatDRC. [zeo_vec2d]